(lang dune 1.11)
(package
  (name clap)
  (synopsis "Command line arguments parser.")
  (description "Easy to use command line arguments parser.")
)
(authors "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(maintainers "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(generate_opam_files true)
